[gd_scene load_steps=9 format=4 uid="uid://dabb58j1mikvn"]

[ext_resource type="Script" path="res://addons/wfc/demo/scripts/main.gd" id="1_cugxq"]
[ext_resource type="Texture2D" uid="uid://b5bg6repn11ot" path="res://addons/wfc/demo/tiledProjects/Tiny Battle - Kenney/tinyBattleMap_bank.png" id="2_57p1t"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ii7oi"]
texture = ExtResource("2_57p1t")
0:0/0 = 0
0:0/0/custom_data_0 = Vector3i(-1, -1, -1)
1:0/0 = 0
1:0/0/custom_data_0 = Vector3i(-1, -1, -1)
2:0/0 = 0
2:0/0/custom_data_0 = Vector3i(-1, -1, -1)
3:0/0 = 0
3:0/0/custom_data_0 = Vector3i(-1, -1, -1)
4:0/0 = 0
4:0/0/custom_data_0 = Vector3i(-1, -1, -1)
5:0/0 = 0
5:0/0/custom_data_0 = Vector3i(-1, -1, -1)
6:0/0 = 0
6:0/0/custom_data_0 = Vector3i(-1, -1, -1)
7:0/0 = 0
7:0/0/custom_data_0 = Vector3i(-1, -1, -1)
8:0/0 = 0
8:0/0/custom_data_0 = Vector3i(-1, -1, -1)
9:0/0 = 0
9:0/0/custom_data_0 = Vector3i(-1, -1, -1)
10:0/0 = 0
10:0/0/custom_data_0 = Vector3i(-1, -1, -1)
0:1/0 = 0
0:1/0/custom_data_0 = Vector3i(-1, -1, -1)
1:1/0 = 0
1:1/0/custom_data_0 = Vector3i(-1, -1, -1)
2:1/0 = 0
2:1/0/custom_data_0 = Vector3i(-1, -1, -1)
3:1/0 = 0
3:1/0/custom_data_0 = Vector3i(-1, -1, -1)
4:1/0 = 0
4:1/0/custom_data_0 = Vector3i(-1, -1, -1)
5:1/0 = 0
5:1/0/custom_data_0 = Vector3i(-1, -1, -1)
6:1/0 = 0
6:1/0/custom_data_0 = Vector3i(-1, -1, -1)
7:1/0 = 0
7:1/0/custom_data_0 = Vector3i(-1, -1, -1)
8:1/0 = 0
8:1/0/custom_data_0 = Vector3i(-1, -1, -1)
9:1/0 = 0
9:1/0/custom_data_0 = Vector3i(-1, -1, -1)
10:1/0 = 0
10:1/0/custom_data_0 = Vector3i(-1, -1, -1)
0:2/0 = 0
0:2/0/custom_data_0 = Vector3i(-1, -1, -1)
1:2/0 = 0
1:2/0/custom_data_0 = Vector3i(-1, -1, -1)
2:2/0 = 0
2:2/0/custom_data_0 = Vector3i(-1, -1, -1)
3:2/0 = 0
3:2/0/custom_data_0 = Vector3i(-1, -1, -1)
4:2/0 = 0
4:2/0/custom_data_0 = Vector3i(-1, -1, -1)
5:2/0 = 0
5:2/0/custom_data_0 = Vector3i(-1, -1, -1)
6:2/0 = 0
6:2/0/custom_data_0 = Vector3i(-1, -1, -1)
7:2/0 = 0
7:2/0/custom_data_0 = Vector3i(-1, -1, -1)
8:2/0 = 0
8:2/0/custom_data_0 = Vector3i(-1, -1, -1)
9:2/0 = 0
9:2/0/custom_data_0 = Vector3i(-1, -1, -1)
10:2/0 = 0
10:2/0/custom_data_0 = Vector3i(-1, -1, -1)
0:3/0 = 0
0:3/0/custom_data_0 = Vector3i(-1, -1, -1)
1:3/0 = 0
1:3/0/custom_data_0 = Vector3i(-1, -1, -1)
2:3/0 = 0
2:3/0/custom_data_0 = Vector3i(-1, -1, -1)
3:3/0 = 0
3:3/0/custom_data_0 = Vector3i(-1, -1, -1)
4:3/0 = 0
4:3/0/custom_data_0 = Vector3i(-1, -1, -1)
5:3/0 = 0
5:3/0/custom_data_0 = Vector3i(-1, -1, -1)
6:3/0 = 0
6:3/0/custom_data_0 = Vector3i(-1, -1, -1)
7:3/0 = 0
7:3/0/custom_data_0 = Vector3i(-1, -1, -1)
8:3/0 = 0
8:3/0/custom_data_0 = Vector3i(-1, -1, -1)
9:3/0 = 0
9:3/0/custom_data_0 = Vector3i(-1, -1, -1)
10:3/0 = 0
10:3/0/custom_data_0 = Vector3i(-1, -1, -1)
0:4/0 = 0
0:4/0/custom_data_0 = Vector3i(-1, -1, -1)
1:4/0 = 0
1:4/0/custom_data_0 = Vector3i(-1, -1, -1)
2:4/0 = 0
2:4/0/custom_data_0 = Vector3i(-1, -1, -1)
3:4/0 = 0
3:4/0/custom_data_0 = Vector3i(-1, -1, -1)
4:4/0 = 0
4:4/0/custom_data_0 = Vector3i(-1, -1, -1)
5:4/0 = 0
5:4/0/custom_data_0 = Vector3i(-1, -1, -1)
6:4/0 = 0
6:4/0/custom_data_0 = Vector3i(-1, -1, -1)
7:4/0 = 0
7:4/0/custom_data_0 = Vector3i(-1, -1, -1)
8:4/0 = 0
8:4/0/custom_data_0 = Vector3i(-1, -1, -1)
9:4/0 = 0
9:4/0/custom_data_0 = Vector3i(-1, -1, -1)
10:4/0 = 0
10:4/0/custom_data_0 = Vector3i(-1, -1, -1)
0:5/0 = 0
0:5/0/custom_data_0 = Vector3i(-1, -1, -1)

[sub_resource type="TileSet" id="TileSet_c8r3i"]
custom_data_layer_0/name = "Pattern: FlipH / FlipV / Rotate"
custom_data_layer_0/type = 10
custom_data_layer_1/name = "Tile: FlipH / FlipV / Rotate"
custom_data_layer_1/type = 10
custom_data_layer_2/name = "Change: FlipH / FlipV / Rotate"
custom_data_layer_2/type = 10
custom_data_layer_3/name = "FlipH Change ID"
custom_data_layer_3/type = 10
custom_data_layer_4/name = "FlipV Change ID"
custom_data_layer_4/type = 10
custom_data_layer_5/name = "Rotate 90º Change ID"
custom_data_layer_5/type = 10
custom_data_layer_6/name = "Rotate 180º Change ID"
custom_data_layer_6/type = 10
custom_data_layer_7/name = "Rotate 270º Change ID"
custom_data_layer_7/type = 10
custom_data_layer_8/name = "Rotate 90º + FlipH Change ID"
custom_data_layer_8/type = 10
custom_data_layer_9/name = "Rotate 90º + FlipV Change ID"
custom_data_layer_9/type = 10
sources/0 = SubResource("TileSetAtlasSource_ii7oi")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2rywu"]
texture = ExtResource("2_57p1t")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0

[sub_resource type="TileSet" id="TileSet_g3j8r"]
sources/0 = SubResource("TileSetAtlasSource_2rywu")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y6wdq"]
texture = ExtResource("2_57p1t")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0

[sub_resource type="TileSet" id="TileSet_ytptm"]
sources/0 = SubResource("TileSetAtlasSource_y6wdq")

[node name="Main" type="Node2D"]
script = ExtResource("1_cugxq")

[node name="WFCGenerator2D" type="WFCGenerator2D" parent="." node_paths=PackedStringArray("sample_map", "patterns_map", "output_map")]
pattern_size = 2
output_map_width = 30
output_map_height = 30
limit_steps = 10
execution_seed = 90
decisions_without_backtracking = 0
sample_map = NodePath("../DemoInterface/FullInterface/RightSide/Right/BotRightMaps/Layers/SampleMap")
patterns_map = NodePath("../DemoInterface/FullInterface/RightSide/Right/BotRightMaps/Layers/Patterns")
output_map = NodePath("../DemoInterface/FullInterface/RightSide/Right/BotRightMaps/Layers/OutputMap")

[node name="DemoInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FullInterface" type="HSplitContainer" parent="DemoInterface"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LeftSide" type="VBoxContainer" parent="DemoInterface/FullInterface"]
layout_mode = 2
alignment = 1

[node name="Title" type="RichTextLabel" parent="DemoInterface/FullInterface/LeftSide"]
layout_mode = 2
text = "WFC - Demo Scene"
fit_content = true

[node name="Buttons" type="HSplitContainer" parent="DemoInterface/FullInterface/LeftSide"]
layout_mode = 2

[node name="BuildButton" type="Button" parent="DemoInterface/FullInterface/LeftSide/Buttons"]
layout_mode = 2
text = "Build Model"

[node name="RunButton" type="Button" parent="DemoInterface/FullInterface/LeftSide/Buttons"]
layout_mode = 2
text = "Run Model"

[node name="BuildModelText" type="RichTextLabel" parent="DemoInterface/FullInterface/LeftSide"]
layout_mode = 2
text = "The model has NOT been built."
fit_content = true

[node name="BuildTimeText" type="RichTextLabel" parent="DemoInterface/FullInterface/LeftSide"]
layout_mode = 2
text = "Build time: 0 ms"
fit_content = true

[node name="SeedText" type="RichTextLabel" parent="DemoInterface/FullInterface/LeftSide"]
layout_mode = 2
text = "Seed used: 42"
fit_content = true

[node name="RunIDText" type="RichTextLabel" parent="DemoInterface/FullInterface/LeftSide"]
layout_mode = 2
text = "Run ID: 0"
fit_content = true

[node name="RunModelText" type="RichTextLabel" parent="DemoInterface/FullInterface/LeftSide"]
layout_mode = 2
text = "The model has NOT started running."
fit_content = true

[node name="ContradictionsText" type="RichTextLabel" parent="DemoInterface/FullInterface/LeftSide"]
visible = false
layout_mode = 2
text = "Contradictions: 0"
fit_content = true

[node name="RunTimeText" type="RichTextLabel" parent="DemoInterface/FullInterface/LeftSide"]
layout_mode = 2
text = "Run time: 0 ms"
fit_content = true

[node name="RightSide" type="VSplitContainer" parent="DemoInterface/FullInterface"]
layout_mode = 2

[node name="Right" type="VBoxContainer" parent="DemoInterface/FullInterface/RightSide"]
layout_mode = 2

[node name="TopRightButtons" type="HSplitContainer" parent="DemoInterface/FullInterface/RightSide/Right"]
layout_mode = 2

[node name="LeftButtons" type="HSplitContainer" parent="DemoInterface/FullInterface/RightSide/Right/TopRightButtons"]
layout_mode = 2

[node name="SampleButton" type="Button" parent="DemoInterface/FullInterface/RightSide/Right/TopRightButtons/LeftButtons"]
layout_mode = 2
text = "Sample Map"

[node name="PatternsButton" type="Button" parent="DemoInterface/FullInterface/RightSide/Right/TopRightButtons/LeftButtons"]
layout_mode = 2
text = "Patterns"

[node name="OutputButton" type="Button" parent="DemoInterface/FullInterface/RightSide/Right/TopRightButtons"]
layout_mode = 2
text = "Output Map"

[node name="BotRightMaps" type="CenterContainer" parent="DemoInterface/FullInterface/RightSide/Right"]
layout_mode = 2

[node name="Layers" type="Node2D" parent="DemoInterface/FullInterface/RightSide/Right/BotRightMaps"]
position = Vector2(20, 20)

[node name="SampleMap" type="TileMapLayer" parent="DemoInterface/FullInterface/RightSide/Right/BotRightMaps/Layers"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAJAAAAAAAAAAIAAAACAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAGAAEAAAAAAAUAAAACAAAAAAAAAAYAAAAFAAAAAAAAAAcAAAAIAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAJAAAAAAAAAAoAAAABAAIAAAAAAAsAAAAHAAIAAAAAAAwAAAAHAAIAAAAAAA0AAAAHAAIAAAAAAA4AAAAFAAMAAAAAAA8AAAACAAAAAAAAABAAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAJAAAAAAABAAIAAAAAAAAAAAABAAMAAAACAAAAAAABAAQAAAAGAAEAAAABAAUAAAACAAAAAAABAAYAAAAAAAAAAAABAAcAAAAFAAAAAAABAAgAAAAIAAAAAAABAAkAAAAFAAAAAAABAAoAAAABAAIAAAABAAsAAAAHAAIAAAABAAwAAAAHAAIAAAABAA0AAAAHAAIAAAABAA4AAAAFAAMAAAABAA8AAAAAAAAAAAABABAAAAACAAAAAAACAAAAAAABAAAAAAACAAEAAAAJAAAAAAACAAIAAAABAAEAAAACAAMAAAADAAAAAAACAAQAAAAJAAEAAAACAAUAAAADAAAAAAACAAYAAAAJAAIAAAACAAcAAAAFAAAAAAACAAgAAAAIAAAAAAACAAkAAAAIAAAAAAACAAoAAAABAAIAAAACAAsAAAAHAAIAAAACAAwAAAAHAAIAAAACAA0AAAAHAAIAAAACAA4AAAAFAAMAAAACAA8AAAAAAAAAAAACABAAAAAAAAAAAAADAAAAAAACAAAAAAADAAEAAAAAAAAAAAADAAIAAAACAAEAAAADAAMAAAACAAAAAAADAAQAAAAGAAEAAAADAAUAAAACAAAAAAADAAYAAAACAAEAAAADAAcAAAACAAAAAAADAAgAAAAEAAEAAAADAAkAAAAAAAAAAAADAAoAAAABAAIAAAADAAsAAAAHAAIAAAADAAwAAAAHAAIAAAADAA0AAAAHAAIAAAADAA4AAAAFAAMAAAADAA8AAAACAAAAAAADABAAAAACAAAAAAAEAAAAAAADAAAAAAAEAAEAAAADAAAAAAAEAAIAAAADAAEAAAAEAAMAAAACAAAAAAAEAAQAAAAGAAEAAAAEAAUAAAACAAAAAAAEAAYAAAACAAEAAAAEAAcAAAAFAAAAAAAEAAgAAAAIAAAAAAAEAAkAAAACAAAAAAAEAAoAAAABAAIAAAAEAAsAAAAHAAIAAAAEAAwAAAAHAAIAAAAEAA0AAAAHAAIAAAAEAA4AAAAFAAMAAAAEAA8AAAACAAAAAAAEABAAAAAAAAAAAAAFAAAAAAACAAAAAAAFAAEAAAAJAAAAAAAFAAIAAAACAAAAAAAFAAMAAAACAAAAAAAFAAQAAAAGAAEAAAAFAAUAAAACAAAAAAAFAAYAAAACAAEAAAAFAAcAAAACAAAAAAAFAAgAAAACAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAABAAIAAAAFAAsAAAAHAAIAAAAFAAwAAAAHAAIAAAAFAA0AAAAHAAIAAAAFAA4AAAAGAAMAAAAFAA8AAAAGAAIAAAAFABAAAAAGAAIAAAAGAAAAAAAEAAAAAAAGAAEAAAAEAAAAAAAGAAIAAAAEAAAAAAAGAAMAAAAFAAEAAAAGAAQAAAAKAAEAAAAGAAUAAAAAAAAAAAAGAAYAAAAKAAIAAAAGAAcAAAADAAAAAAAGAAgAAAADAAAAAAAGAAkAAAADAAAAAAAGAAoAAAACAAIAAAAGAAsAAAAHAAIAAAAGAAwAAAAHAAIAAAAGAA0AAAAHAAIAAAAGAA4AAAAHAAIAAAAGAA8AAAAHAAIAAAAGABAAAAAHAAIAAAAHAAAAAAAAAAAAAAAHAAEAAAAFAAAAAAAHAAIAAAACAAAAAAAHAAMAAAAGAAEAAAAHAAQAAAACAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAACAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAQAAAAHAAoAAAABAAIAAAAHAAsAAAAHAAIAAAAHAAwAAAAHAAIAAAAHAA0AAAAHAAIAAAAHAA4AAAAHAAIAAAAHAA8AAAAHAAIAAAAHABAAAAAHAAIAAAAIAAAAAAACAAAAAAAIAAEAAAACAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAGAAEAAAAIAAQAAAACAAAAAAAIAAUAAAACAAAAAAAIAAYAAAAAAAMAAAAIAAcAAAAAAAAAAAAIAAgAAAACAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAADAAIAAAAIAAsAAAAHAAMAAAAIAAwAAAAIAAIAAAAIAA0AAAAHAAIAAAAIAA4AAAAHAAIAAAAIAA8AAAAHAAIAAAAIABAAAAAHAAIAAAAJAAAAAAACAAAAAAAJAAEAAAACAAAAAAAJAAIAAAAEAAEAAAAJAAMAAAAGAAEAAAAJAAQAAAACAAAAAAAJAAUAAAACAAAAAAAJAAYAAAAGAAEAAAAJAAcAAAACAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAACAAAAAAAJAAoAAAAAAAEAAAAJAAsAAAACAAAAAAAJAAwAAAABAAIAAAAJAA0AAAAHAAIAAAAJAA4AAAAHAAIAAAAJAA8AAAAHAAIAAAAJABAAAAAHAAIAAAAKAAAAAAAEAAAAAAAKAAEAAAAEAAAAAAAKAAIAAAAEAAAAAAAKAAMAAAAHAAEAAAAKAAQAAAAEAAAAAAAKAAUAAAAEAAAAAAAKAAYAAAABAAMAAAAKAAcAAAAAAAAAAAAKAAgAAAACAAAAAAAKAAkAAAABAAQAAAAKAAoAAAAEAAAAAAAKAAsAAAAEAAAAAAAKAAwAAAAFAAQAAAAKAA0AAAAIAAQAAAAKAA4AAAAHAAIAAAAKAA8AAAAHAAIAAAAKABAAAAAHAAIAAAALAAAAAAAFAAAAAAALAAEAAAACAAAAAAALAAIAAAAEAAEAAAALAAMAAAAAAAAAAAALAAQAAAACAAAAAAALAAUAAAACAAAAAAALAAYAAAAGAAEAAAALAAcAAAAAAAAAAAALAAgAAAACAAAAAAALAAkAAAAGAAEAAAALAAoAAAAAAAAAAAALAAsAAAACAAAAAAALAAwAAAABAAIAAAALAA0AAAAJAAEAAAALAA4AAAAKAAQAAAALAA8AAAAHAAIAAAALABAAAAAHAAIAAAAMAAAAAAAGAAAAAAAMAAEAAAAKAAAAAAAMAAIAAAAIAAAAAAAMAAMAAAAEAAEAAAAMAAQAAAACAAAAAAAMAAUAAAAEAAIAAAAMAAYAAAACAAMAAAAMAAcAAAAEAAAAAAAMAAgAAAAEAAAAAAAMAAkAAAAHAAEAAAAMAAoAAAACAAQAAAAMAAsAAAACAAAAAAAMAAwAAAABAAIAAAAMAA0AAAAJAAEAAAAMAA4AAAAKAAQAAAAMAA8AAAAHAAIAAAAMABAAAAAHAAIAAAANAAAAAAAHAAAAAAANAAEAAAAIAAAAAAANAAIAAAAHAAAAAAANAAMAAAAFAAAAAAANAAQAAAACAAAAAAANAAUAAAACAAAAAAANAAYAAAAGAAEAAAANAAcAAAAAAAAAAAANAAgAAAACAAAAAAANAAkAAAACAAAAAAANAAoAAAAGAAEAAAANAAsAAAACAAAAAAANAAwAAAABAAIAAAANAA0AAAAJAAEAAAANAA4AAAAKAAQAAAANAA8AAAAHAAIAAAANABAAAAAHAAIAAAAOAAAAAAAIAAAAAAAOAAEAAAAKAAAAAAAOAAIAAAAIAAAAAAAOAAMAAAACAAAAAAAOAAQAAAAJAAAAAAAOAAUAAAAFAAIAAAAOAAYAAAADAAMAAAAOAAcAAAACAAAAAAAOAAgAAAACAAAAAAAOAAkAAAACAAAAAAAOAAoAAAAGAAEAAAAOAAsAAAACAAAAAAAOAAwAAAADAAIAAAAOAA0AAAAJAAEAAAAOAA4AAAAKAAQAAAAOAA8AAAAHAAIAAAAOABAAAAAHAAIAAAAPAAAAAAAFAAAAAAAPAAEAAAAHAAAAAAAPAAIAAAAGAAAAAAAPAAMAAAAIAAEAAAAPAAQAAAACAAAAAAAPAAUAAAACAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAACAAAAAAAPAAgAAAAIAAAAAAAPAAkAAAACAAAAAAAPAAoAAAACAAMAAAAPAAsAAAAEAAAAAAAPAAwAAAAEAAAAAAAPAA0AAAAJAAQAAAAPAA4AAAABAAIAAAAPAA8AAAAHAAIAAAAPABAAAAAHAAIAAAAQAAAAAAAIAAAAAAAQAAEAAAAIAAAAAAAQAAIAAAACAAAAAAAQAAMAAAACAAAAAAAQAAQAAAAAAAEAAAAQAAUAAAACAAAAAAAQAAYAAAAIAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAIAAAAAAAQAAkAAAAFAAAAAAAQAAoAAAAGAAEAAAAQAAsAAAACAAAAAAAQAAwAAAACAAAAAAAQAA0AAAAAAAEAAAAQAA4AAAABAAIAAAAQAA8AAAAHAAIAAAAQABAAAAAHAAIAAAARAAAAAAAJAAAAAAARAAEAAAACAAAAAAARAAIAAAACAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAIAAAARAAUAAAAGAAIAAAARAAYAAAAEAAMAAAARAAcAAAAFAAAAAAARAAgAAAAIAAAAAAARAAkAAAACAAAAAAARAAoAAAAGAAEAAAARAAsAAAACAAAAAAARAAwAAAAGAAQAAAARAA0AAAACAAAAAAARAA4AAAADAAIAAAARAA8AAAAHAAMAAAARABAAAAAHAAMAAAASAAAAAAAAAAAAAAASAAEAAAAFAAAAAAASAAIAAAACAAAAAAASAAMAAAACAAAAAAASAAQAAAABAAIAAAASAAUAAAAHAAIAAAASAAYAAAAFAAMAAAASAAcAAAAFAAAAAAASAAgAAAAIAAMAAAASAAkAAAACAAAAAAASAAoAAAAGAAEAAAASAAsAAAACAAAAAAASAAwAAAACAAAAAAASAA0AAAAGAAQAAAASAA4AAAACAAAAAAASAA8AAAACAAAAAAASABAAAAAJAAAAAAATAAAAAAAAAAAAAAATAAEAAAACAAAAAAATAAIAAAAJAAAAAAATAAMAAAAAAAEAAAATAAQAAAABAAIAAAATAAUAAAAHAAIAAAATAAYAAAAGAAMAAAATAAcAAAAGAAIAAAATAAgAAAAJAAMAAAATAAkAAAACAAAAAAATAAoAAAADAAQAAAATAAsAAAAEAAAAAAATAAwAAAAHAAQAAAATAA0AAAAAAAAAAAATAA4AAAACAAAAAAATAA8AAAAJAAAAAAATABAAAAACAAAAAAAUAAAAAAADAAAAAAAUAAEAAAADAAAAAAAUAAIAAAADAAAAAAAUAAMAAAADAAAAAAAUAAQAAAACAAIAAAAUAAUAAAAHAAIAAAAUAAYAAAAHAAIAAAAUAAcAAAAHAAIAAAAUAAgAAAAFAAMAAAAUAAkAAAACAAAAAAAUAAoAAAACAAAAAAAUAAsAAAAAAAAAAAAUAAwAAAAGAAEAAAAUAA0AAAACAAAAAAAUAA4AAAAJAAAAAAAUAA8AAAAAAAAAAAAUABAAAAAAAAAAAAAVAAAAAAAAAAAAAAAVAAEAAAACAAAAAAAVAAIAAAACAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAABAAIAAAAVAAUAAAAHAAIAAAAVAAYAAAAHAAIAAAAVAAcAAAAHAAIAAAAVAAgAAAAFAAMAAAAVAAkAAAAJAAAAAAAVAAoAAAAHAAAAAAAVAAsAAAAIAAAAAAAVAAwAAAAGAAEAAAAVAA0AAAAIAAAAAAAVAA4AAAAAAAAAAAAVAA8AAAAAAAAAAAAVABAAAAACAAAAAAAWAAAAAAAAAAAAAAAWAAEAAAAAAAAAAAAWAAIAAAACAAAAAAAWAAMAAAACAAAAAAAWAAQAAAADAAIAAAAWAAUAAAAIAAIAAAAWAAYAAAAHAAIAAAAWAAcAAAAHAAIAAAAWAAgAAAAFAAMAAAAWAAkAAAACAAAAAAAWAAoAAAAFAAAAAAAWAAsAAAAFAAAAAAAWAAwAAAACAAMAAAAWAA0AAAAEAAAAAAAWAA4AAAAEAAAAAAAWAA8AAAAEAAAAAAAWABAAAAAEAAAAAAAXAAAAAAAJAAAAAAAXAAEAAAAAAAAAAAAXAAIAAAAGAAAAAAAXAAMAAAACAAAAAAAXAAQAAAACAAAAAAAXAAUAAAABAAIAAAAXAAYAAAAHAAIAAAAXAAcAAAAHAAIAAAAXAAgAAAAFAAMAAAAXAAkAAAAJAAAAAAAXAAoAAAAIAAAAAAAXAAsAAAAEAAQAAAAXAAwAAAAGAAEAAAAXAA0AAAAEAAQAAAAXAA4AAAAIAAAAAAAXAA8AAAACAAAAAAAXABAAAAACAAAAAAAYAAAAAAACAAAAAAAYAAEAAAACAAAAAAAYAAIAAAABAAAAAAAYAAMAAAAFAAAAAAAYAAQAAAACAAAAAAAYAAUAAAADAAIAAAAYAAYAAAAHAAMAAAAYAAcAAAAHAAMAAAAYAAgAAAAKAAMAAAAYAAkAAAAFAAAAAAAYAAoAAAAIAAAAAAAYAAsAAAACAAAAAAAYAAwAAAADAAMAAAAYAA0AAAACAAAAAAAYAA4AAAACAAAAAAAYAA8AAAAAAAUAAAAYABAAAAACAAAAAAAZAAAAAAAAAAAAAAAZAAEAAAACAAAAAAAZAAIAAAACAAAAAAAZAAMAAAAFAAAAAAAZAAQAAAAHAAAAAAAZAAUAAAAFAAAAAAAZAAYAAAAAAAAAAAAZAAcAAAAIAAAAAAAZAAgAAAAKAAAAAAAZAAkAAAAIAAAAAAAZAAoAAAAIAAAAAAAZAAsAAAAIAAAAAAAZAAwAAAAFAAAAAAAZAA0AAAACAAAAAAAZAA4AAAABAAAAAAAZAA8AAAAJAAAAAAAZABAAAAACAAAAAAAaAAAAAAACAAAAAAAaAAEAAAAAAAEAAAAaAAIAAAAAAAAAAAAaAAMAAAACAAAAAAAaAAQAAAAIAAAAAAAaAAUAAAAIAAAAAAAaAAYAAAAIAAAAAAAaAAcAAAAFAAAAAAAaAAgAAAAFAAAAAAAaAAkAAAAIAAAAAAAaAAoAAAAFAAAAAAAaAAsAAAAIAAAAAAAaAAwAAAAAAAAAAAAaAA0AAAAAAAAAAAAaAA4AAAACAAAAAAAaAA8AAAACAAAAAAAaABAAAAACAAAAAAAbAAAAAAACAAAAAAAbAAEAAAACAAAAAAAbAAIAAAAAAAEAAAAbAAMAAAAGAAAAAAAbAAQAAAACAAAAAAAbAAUAAAAFAAAAAAAbAAYAAAAIAAAAAAAbAAcAAAAHAAAAAAAbAAgAAAAIAAAAAAAbAAkAAAAFAAAAAAAbAAoAAAACAAAAAAAbAAsAAAACAAAAAAAbAAwAAAAHAAAAAAAbAA0AAAAEAAEAAAAbAA4AAAAJAAAAAAAbAA8AAAACAAAAAAAbABAAAAAEAAEAAAAcAAAAAAACAAAAAAAcAAEAAAAKAAAAAAAcAAIAAAACAAAAAAAcAAMAAAAAAAAAAAAcAAQAAAAJAAAAAAAcAAUAAAACAAAAAAAcAAYAAAAFAAAAAAAcAAcAAAAKAAAAAAAcAAgAAAAIAAAAAAAcAAkAAAACAAAAAAAcAAoAAAAAAAAAAAAcAAsAAAAFAAAAAAAcAAwAAAACAAAAAAAcAA0AAAAAAAAAAAAcAA4AAAACAAAAAAAcAA8AAAAAAAAAAAAcABAAAAAAAAAAAAAdAAAAAAACAAAAAAAdAAEAAAACAAAAAAAdAAIAAAAFAAAAAAAdAAMAAAACAAAAAAAdAAQAAAAAAAAAAAAdAAUAAAACAAAAAAAdAAYAAAAIAAAAAAAdAAcAAAAIAAAAAAAdAAgAAAAAAAAAAAAdAAkAAAACAAAAAAAdAAoAAAACAAAAAAAdAAsAAAAAAAAAAAAdAAwAAAAJAAAAAAAdAA0AAAAAAAAAAAAdAA4AAAAKAAAAAAAdAA8AAAACAAAAAAAdABAAAAACAAAAAAA=")
tile_set = SubResource("TileSet_c8r3i")

[node name="Patterns" type="TileMapLayer" parent="DemoInterface/FullInterface/RightSide/Right/BotRightMaps/Layers"]
visible = false
tile_set = SubResource("TileSet_g3j8r")

[node name="OutputMap" type="TileMapLayer" parent="DemoInterface/FullInterface/RightSide/Right/BotRightMaps/Layers"]
visible = false
tile_set = SubResource("TileSet_ytptm")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(535, 285)

[connection signal="wfc_finished_running" from="WFCGenerator2D" to="." method="_on_wfc_finished_running"]
